@@ -12,6 +12,7 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.*;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * Copyright (C) 2025 Gear Shift Gaming - All Rights Reserved
@@ -31,20 +32,22 @@ public class ModMapper implements RowMapper<Mod> {
                         rs.getString("friendly_name"),
                         rs.getString("published_service_name"),
                         rs.getInt("load_priority"),
-                        Arrays.asList(rs.getString("categories").split(",")),
+                        rs.getString("categories") != null ? Arrays.asList(rs.getString("categories").split(",")) :List.of("UNKNOWN"),
                         rs.getInt("active") >= 1,
                         StringCodepressor.decompressAndDecodeString(rs.getString("description")),
-                        Instant.ofEpochMilli(Long.parseLong(rs.getString("steam_mod_last_updated"))).atZone(ZoneId.systemDefault()).toLocalDateTime());
+                        rs.getString("steam_mod_last_updated") != null ?
+                                Instant.ofEpochMilli(Long.parseLong(rs.getString("steam_mod_last_updated"))).atZone(ZoneId.systemDefault()).toLocalDateTime() :
+                        LocalDateTime.ofEpochSecond(0, 0, ZoneOffset.UTC));
 
             } else {
                 mod = new ModIoMod(rs.getString("mod_id"),
                         rs.getString("friendly_name"),
                         rs.getString("published_service_name"),
                         rs.getInt("load_priority"),
-                        Arrays.asList(rs.getString("categories").split(",")),
+                        rs.getString("categories") != null ? Arrays.asList(rs.getString("categories").split(",")) :List.of("UNKNOWN"),
                         rs.getInt("active") >= 1,
                         StringCodepressor.decompressAndDecodeString(rs.getString("description")),
-                        Year.parse(rs.getString("last_updated_year")),
+                        rs.getString("last_updated_year") != null ? Year.parse(rs.getString("last_updated_year")) : Year.parse("1970"),
                         rs.getString("last_updated_month_day") != null ? MonthDay.parse(rs.getString("last_updated_month_day")) : null,
                         rs.getString("last_updated_hour") != null ? LocalTime.parse(rs.getString("last_updated_hour")) : null);
             }
